# likelib-hackathon

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile.code-quality  Dockerfile.test  README.md  build.Dockerfile  clang-tidy.py  code-quality.Dockerfile  integration_test.Dockerfile  test.Dockerfile  unit_test.Dockerfile
src/base/: CMakeLists.txt  address.cpp  address.hpp  assert.hpp  asymmetric_crypto.cpp  asymmetric_crypto.hpp  big_integer.hpp  big_integer.tpp  big_num.hpp  big_num.tpp  bytes.cpp  bytes.hpp  bytes.tpp  config.cpp  config.hpp  configuration_manager.cpp  configuration_manager.hpp  configuration_manager.tpp  crypto.cpp  crypto.hpp  database.cpp  database.hpp  database.tpp  directory.cpp  directory.hpp  error.cpp  error.hpp  hash.cpp  hash.hpp  hash.tpp  json.cpp  json.hpp  keccak256.cpp  keccak256.hpp  log.cpp  log.hpp  program_options.cpp  program_options.hpp  program_options.tpp  property_tree.cpp  (+23 more)
src/base/filesystem/: directory.cpp  directory.hpp
src/base/network/: connection.cpp  connection.hpp  connection_acceptor.cpp  connection_acceptor.hpp  ipv4_address.cpp  ipv4_address.hpp  manager.cpp  manager.hpp  network_address.cpp  network_address.hpp
src/bc/: CMakeLists.txt  address.cpp  address.hpp  balance_manager.cpp  balance_manager.hpp  base_client.hpp  base_service.hpp  block.cpp  block.hpp  blockchain.cpp  blockchain.hpp  database_manager.cpp  database_manager.hpp  general_server_service.cpp  general_server_service.hpp  miner.cpp  miner.hpp  miner.tpp  packet.cpp  packet.hpp  protocol.cpp  protocol.hpp  transaction.cpp  transaction.hpp  transactions_set.cpp  transactions_set.hpp  types.hpp
src/client/: CMakeLists.txt  actions.cpp  actions.hpp  client.cpp  client.hpp  config.hpp  main.cpp  parameters_helper.cpp  parameters_helper.hpp  parameters_helper.tpp  subprogram_router.hpp  utility.cpp  utility.hpp  utility.tpp
src/core/: CMakeLists.txt  address.cpp  address.hpp  block.cpp  block.hpp  block.tpp  blockchain.cpp  blockchain.hpp  consensus.cpp  consensus.hpp  core.cpp  core.hpp  eth_adapter.cpp  eth_adapter.hpp  host.cpp  host.hpp  managers.cpp  managers.hpp  messages.cpp  messages.hpp  peer.cpp  peer.hpp  peer.tpp  peer_messages.cpp  protocol.cpp  protocol.hpp  rating.cpp  rating.hpp  transaction.cpp  transaction.hpp  transactions_set.cpp  transactions_set.hpp  types.hpp
src/lk/: CMakeLists.txt  account_manager.cpp  account_manager.hpp  balance_manager.cpp  balance_manager.hpp  contract_runner.cpp  contract_runner.hpp  core.cpp  core.hpp  eth_adapter.cpp  eth_adapter.hpp  host.cpp  host.hpp  managers.cpp  managers.hpp  peer.cpp  peer.hpp  protocol.cpp  protocol.hpp
src/net/: CMakeLists.txt  acceptor.cpp  acceptor.hpp  connection.cpp  connection.hpp  connector.cpp  connector.hpp  endpoint.cpp  endpoint.hpp  error.hpp  host.cpp  host.hpp  manager.cpp  manager.hpp  network.cpp  network.hpp  network_address.cpp  network_address.hpp  packet.cpp  packet.hpp  peer.cpp  peer.hpp  session.cpp  session.hpp
src/network/: CMakeLists.txt  connection.cpp  connection.hpp  connection_acceptor.cpp  connection_acceptor.hpp  error.hpp  manager.cpp  manager.hpp  network_address.cpp  network_address.hpp  packet.cpp  packet.hpp
src/node/: CMakeLists.txt  general_server_service.cpp  general_server_service.hpp  hard_config.cpp  hard_config.hpp  key_vault.cpp  key_vault.hpp  main.cpp  miner.cpp  miner.hpp  node.cpp  node.hpp  node_client.cpp  public_service.cpp  public_service.hpp  public_service.tpp  rpc_service.cpp  rpc_service.hpp  soft_config.cpp  soft_config.hpp
src/rpc/: CMakeLists.txt  base_client.cpp  base_client.hpp  base_rpc.cpp  base_rpc.hpp  base_rpc_client.cpp  base_rpc_client.hpp  base_rpc_server.cpp  base_rpc_server.hpp  base_server.cpp  base_server.hpp  base_service.hpp  error.hpp  factory.cpp  factory.hpp  rpc.cpp  rpc.hpp
src/rpc/grpc/: grpc_adapter.cpp  grpc_adapter.hpp  grpc_client.cpp  grpc_client.hpp  grpc_node_client.cpp  grpc_node_client.hpp  grpc_node_server.cpp  grpc_node_server.hpp  grpc_node_server.tpp  grpc_server.cpp  grpc_server.hpp  grpc_service.cpp  grpc_service.hpp  grpc_service.tpp  tools.cpp  tools.hpp
src/rpc/http/: http_adapter.cpp  http_adapter.hpp  http_client.cpp  http_client.hpp  http_server.cpp  http_server.hpp  main.cpp  tools.cpp  tools.hpp
src/rpc/impl/: hello_world_server.cpp
src/vm/: CMakeLists.txt  encode_decode.cpp  encode_decode.hpp  error.hpp  host.cpp  host.hpp  messages.cpp  messages.hpp  solc.cpp  solc.hpp  tools.cpp  tools.hpp  vm.cpp  vm.hpp
src/vm/evmc/: CMakeLists.txt  README.md
src/vm/python/: decoder.py  encoder.py
src/web_socket/: CMakeLists.txt  client.cpp  client.hpp  error.hpp  server.cpp  server.hpp  session.cpp  session.hpp  tools.cpp  tools.hpp
src/websocket/: CMakeLists.txt  acceptor.cpp  acceptor.hpp  client.cpp  client.hpp  connection.cpp  connection.hpp  error.hpp  session.cpp  session.hpp  tools.cpp  tools.hpp  types.hpp
test/: CMakeLists.txt  main.cpp
test/base/: asymmetric_crypto.cpp  big_integer.cpp  big_num.cpp  bytes.cpp  configuration_manager.cpp  crypto.cpp  database.cpp  error.cpp  error_codes.cpp  hash.cpp  log.cpp  new_crypto.cpp  plain_result_use.cpp  program_options.cpp  property_tree.cpp  result.cpp  serialization.cpp  status.cpp  symmetric_crypto.cpp  time.cpp  timer.cpp
test/bc/: address.cpp  balance_manager.cpp  block.cpp  database_manager.cpp  transaction.cpp  transactions_set.cpp
test/integration_test/: __main__.py  run_test.py  test_auction_contract.py  test_bad_network.py  test_common_process.py  test_communication_base.py  test_connection.py  test_contract.py  test_contract_functions.py  test_multi_network.py  test_multi_transfer.py  test_real_network.py  test_simple_network.py  test_transaction.py  test_transfer.py  tester.py
test/integration_test/node_client/: .gitignore  client.py  install_env.sh  public_rpc_pb2.py
test/lk/: balance_manager.cpp
test/net/: packet.cpp
test/network/: packet.cpp
test/rpc/: base_rpc.cpp
test/unit_test/: CMakeLists.txt  CMakeLists.txt.orig  main.cpp
(+148 files in other folders)
